# AlephBFT

./: 404.html  Cargo.toml  README.md  aleph_bft_api.html  bump_version.sh  differences.html  index.html  internals.html  print.html  reliable_broadcast.html  run_local_pipeline.sh  rush_api.html  searchindex.js  searchindex.json  what_is_aleph.html  what_is_aleph_bft.html  what_is_rush.html
.github/actions/check-version-bumped/: action.yml
.github/scripts/: check-cargo-toml-version-bumped.sh
.github/workflows/: check-version-bumped-consensus.yml  check-version-bumped-crypto.yml  check-version-bumped-mock.yml  check-version-bumped-rmc.yml  check-version-bumped-types.yml  check-version-bumped.yml  ci.yml  coverage.yml  gh-pages.yml  post-dod-checklist.yml  prepare-version-bump.yml  publish-package.yml  publish-packages.yml  push-foundation-repo.yml  readme-cargo-toml-versions-aligned.yml  version-bump.yml
bft/src/: alerts.rs  lib.rs  member.rs  network.rs  runway.rs  signed.rs  units.rs
bft/src/testing/: alerts.rs  byzantine.rs
consensus/: Cargo.toml
consensus/src/: alerts.rs  config.rs  consensus.rs  extender.rs  lib.rs  member.rs  network.rs  rmc.rs  runway.rs  signed.rs  task_queue.rs  terminal.rs  terminator.rs  units.rs
consensus/src/alerts/: handler.rs  io.rs  mod.rs  service.rs
consensus/src/backup/: injector.rs  loader.rs  mod.rs  saver.rs
consensus/src/collection/: mod.rs
consensus/src/consensus/: handler.rs  mod.rs  service.rs
consensus/src/creation/: collector.rs  creator.rs  mod.rs
consensus/src/dag/: mod.rs
consensus/src/dag/reconstruction/: dag.rs  mod.rs  parents.rs
consensus/src/dissemination/: mod.rs  task.rs
consensus/src/extension/: election.rs  extender.rs  mod.rs  units.rs
consensus/src/network/: mod.rs  unit.rs
consensus/src/reconstruction/: dag.rs  mod.rs  parents.rs
consensus/src/runway/: backup.rs  collection.rs  mod.rs  packer.rs  provider.rs
consensus/src/testing/: alerts.rs  byzantine.rs  consensus.rs  crash.rs  crash_recovery.rs  creation.rs  dag.rs  mock.rs  mod.rs  rmc.rs  signed.rs  unreliable.rs
consensus/src/testing/mock/: crypto.rs  dataio.rs  hasher.rs  network.rs  spawner.rs  unreliable_router.rs
consensus/src/units/: control_hash.rs  mod.rs  store.rs  testing.rs  validator.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  node.rs  nodes.rs  signature.rs  signed.rs
docs/: book.toml
docs/src/: aleph_bft_api.md  how_alephbft_does_it.md  internals.md  reliable_broadcast.md  rush_api.md  what_is_aleph.md
examples/: dummy_honest.rs
examples/blockchain/: Cargo.toml  chain.rs  crypto.rs  main.rs  network.rs  run.sh  run_blockchain.sh  run_bootnode.sh  run_client.sh  run_dummy_client.sh  run_nodes.sh  run_other.sh
examples/blockchain/chain/: data.rs  mod.rs
examples/blockchain/examples/: blockchain.rs
examples/blockchain/src/: blockchain.rs  chain.rs  client.rs  consensus.rs  data.rs  io.rs  lib.rs  main.rs  network.rs  node.rs
examples/blockchain/src/chain/: data.rs  mod.rs
examples/crash_recovery/: Cargo.toml  run.sh
examples/crash_recovery/src/: main.rs  network.rs
examples/dummy_honest/: Cargo.toml
examples/dummy_honest/examples/: dummy_honest.rs
examples/network/: Cargo.toml
examples/network/src/: lib.rs
examples/ordering/: .gitignore  Cargo.toml  run.sh  run_chain_crash_recovery.sh  run_node_crash_recovery.sh
examples/ordering/src/: dataio.rs  main.rs  network.rs
fuzz/: Cargo.toml
fuzz/src/: fuzz.rs  lib.rs  main.rs  spawner.rs
mock/: Cargo.toml
mock/src/: bad_verbose_multikeychain.rs  constant_signature_keybox.rs  crypto.rs  dataio.rs  dummy_keychain.rs  lib.rs  network.rs  rmc.rs  router.rs  signable.rs  signable_byte.rs  spawner.rs  threshold_multi_keychain.rs  unreliable_router.rs  verbose_keybox.rs  verbose_signature.rs
mock/src/crypto/: keychain.rs  mod.rs  wrappers.rs
rmc/: Cargo.toml  README.md
rmc/src/: handler.rs  lib.rs  scheduler.rs  service.rs
rmc/src/tests/: mock.rs
signed/: Cargo.toml
src/: 35,48  alerts.rs  bft.rs  config.rs  consensus.rs  creator.rs  extender.rs  lib.rs  member.rs  network.rs  nodes.rs  recovery.rs  rmc.rs  runway.rs  signed.rs  skeleton.rs  terminal.rs  testing.rs  traits.rs  units.rs
src/creation/: creator.rs  mod.rs
src/signed/: tests.rs
src/testing/: alerts.rs  byzantine.rs  consensus.rs  dag.rs  mock.rs  rmc.rs
src/units/: store.rs
types/: Cargo.toml  README.md
types/src/: backup.rs  dataio.rs  lib.rs  network.rs  nodes.rs  signed.rs  tasks.rs  units.rs
