[package]
name = "rush"
version = "0.3.0"
edition = "2018"
authors = ["Cardinal Cryptography"]
categories = ["algorithms", "data-structures", "cryptography", "database"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
repository = "https://github.com/cardinal-cryptography/?"
keywords = ["aleph", "asynchronous", "consensus", "bft", "blockchain", "distributed-systems"]
license = "Apache-2.0"
readme = "README.md"

description = """
TODO expand
An implementation of the Aleph asynchronous BFT consensus protocol.
"""


[dependencies]
bit-vec = "0.6"
futures = "0.3"
futures-timer = "3.0.2"
derive_more = "0.99"
log = "0.4"
rand = "0.8"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
libp2p = { version ="0", features = ["mdns", "tcp-tokio"]}
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
parking_lot = "0.11"
env_logger = "0.8"
