[package]
name = "aleph-bft-mock"
version = "0.2.1"
edition = "2021"
authors = ["Cardinal Cryptography"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
repository = "https://github.com/Cardinal-Cryptography/AlephBFT"
readme = "./README.md"
description = "Mock implementations of traits required by the aleph-bft package. Do NOT use outside of testing!"

[dependencies]
aleph-bft-types = { path = "../types", version = "0.2" }
async-trait = "0.1.53"
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
futures = "0.3.21"
log = "0.4.16"
parking_lot = "0.12.0"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
