[package]
name = "aleph-bft-types"
version = "0.1.0"
edition = "2018"
authors = ["Cardinal Cryptography"]
categories = ["algorithms", "data-structures", "cryptography", "database"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
repository = "https://github.com/cardinal-cryptography/?"
keywords = ["asynchronous", "consensus", "bft", "blockchain", "distributed-systems"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
bit-vec = "0.6"
futures = "0.3"
futures-timer = "3.0"
derive_more = "0.99"
derivative = "2.2.0"
log = "0.4"
rand = "0.8"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
parking_lot = "0.11"

[dev-dependencies]
sha3 = "0.9.1"
unsigned-varint = { version = "0.7.0", features = ["futures", "asynchronous_codec"] }
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
libp2p = { version ="0.39", features = ["mdns", "tcp-tokio"]}
parking_lot = "0.11"
env_logger = "0.9"
chrono = "0.4"
