[package]
name = "aleph-bft-examples-dummy-honest"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
license = "Apache-2.0"
publish = false

[dependencies]
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
derivative = "2.2.0"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
