[package]
name = "aleph-bft-examples-network"
version = "0.0.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
license = "Apache-2.0"
publish = false

[dependencies]
aleph-bft = { path = "../../consensus", version = "*" }
aleph-bft-mock = { path = "../../mock", version = "*" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
